@@ -2,6 +2,8 @@ Nutch Change Log
   
 Nutch Current Development 1.11-SNAPSHOT
 
+* NUTCH-2083 Implement functionality to shadow nutch-selenium-grid-plugin from Mo Omer (lewismc)
+
 * NUTCH-2049 Upgrade to Hadoop 2.4 (lewismc)
 
 * NUTCH-1486 Upgrade to Solr 4.10.2 (lewismc, markus)
